--- a/node-core/src/main/resources/static/client.html
+++ b/node-core/src/main/resources/static/client.html
@@ -6,38 +6,7 @@
 </head>
 <body>
 <script type="application/javascript">
-    console.log('start test.');
-
-    // 仅限 Windows 系统
-    /*
-    const { spawn } = require('child_process');
-    const bat = spawn('cmd.exe', ['/c', 'ping www.baidu.com']);
-
-    bat.stdout.on('data', (data) => {
-        console.log(data.toString());
-    });
-
-    bat.stderr.on('data', (data) => {
-        console.log(data.toString());
-    });
-
-    bat.on('exit', (code) => {
-        console.log(`子进程退出码：${code}`);
-    });
-    */
-
-    const ws = new WebSocket("ws://localhost:8080/webSocket");
-    ws.onopen = function () {
-        console.log("onpen");
-        ws.send("{这是发送的消息}");
-    };
-    ws.onclose = function () {
-        console.log("onclose");
-    };
-
-    ws.onmessage = function (msg) {
-        console.log(msg.data);
-    };
+    console.log(window.socketClientId);
 </script>
 </body>
 </html>
